--- a/demo/simple/docker-compose.yaml
+++ b/demo/simple/docker-compose.yaml
@@ -3,19 +3,23 @@ services:
   recver:
     build:
       context: .
-      dockerfile: Dockerfile.recver
+      dockerfile: Dockerfile
     volumes:
       - shared-volume:/shared
     hostname: recver
     container_name: recver
+    command:
+      - /recv
   sender:
     build:
       context: .
-      dockerfile: Dockerfile.sender
+      dockerfile: Dockerfile
     volumes:
       - shared-volume:/shared
     hostname: sender
     container_name: sender
+    command:
+      - /send
     depends_on:
       - recver
     links:
